<resources>
    <string name="app_name">GPSLocationApp</string>
    <string name="save_current">Save Current Location</string>
    <string name="add_manual">Add Manual Location</string>
    <string name="view_list">View Saved Locations</string>
    <string name="location_saved">Location saved</string>
    <string name="location_not_available">Location not available</string>
    <string name="invalid_coordinates">Invalid coordinates</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="region">Region</string>
    <string name="save">Save</string>
</resources>
