<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_save_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_current" />

    <Button
        android:id="@+id/btn_add_manual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_manual" />

    <Button
        android:id="@+id/btn_view_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_list" />
</LinearLayout>
